# map-solver-playground

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_install.py  test_map_generators.py
.github/: copilot-instructions.md  git-commit-instructions.md
.junie/: guidelines.md
.run/: Main program.run.xml  pytest.run.xml
src/map_solver_playground/: __init__.py  __main__.py  constants.py  main.py  run_sdl2_app.py  sdl2_app.py  test_renderers.py
src/map_solver_playground/asset_loader/: __init__.py  backend_independent_image_loader.py  image_loader.py
src/map_solver_playground/components/: __init__.py  info_panel.py  map_view.py  status_bar.py  text_panel.py  tooltip_panel.py  widget.py
src/map_solver_playground/map/: __init__.py
src/map_solver_playground/map/filter/: __init__.py
src/map_solver_playground/map/generator/: __init__.py  base_generator.py  diamond_square.py  recursive_diamond_square.py
src/map_solver_playground/map/render/: __init__.py  color_maps.py  color_utils.py  map_surface_renderer.py  map_surface_renderer_factory.py  map_surface_renderer_interfaces.py  pygame_map_surface_renderer.py  pygame_renderer.py  renderer_backend.py  sdl2_map_surface_renderer.py  sdl2_texture_utils.py
src/map_solver_playground/map/render/element/: __init__.py  base_renderer.py  element_renderer_factory.py  element_renderer_interfaces.py  flag_renderer.py  geo_path_renderer.py  pygame_element_renderers.py  pygame_renderer.py  renderer_factory.py  renderer_init.py  sdl2_element_renderers.py  sdl2_renderer.py  terrain_renderer.py
src/map_solver_playground/map/solver/: __init__.py  flow_field_solver.py  map_solver.py
src/map_solver_playground/map/types/: __init__.py  flag.py  geo_path.py  location.py  terrain.py
src/map_solver_playground/maps/: map_data.py
src/map_solver_playground/maps/elements/: __init__.py  flag.py  geo_path.py  map_element.py
src/map_solver_playground/maps/generators/: __init__.py  base_generator.py  diamond_square.py  recursive_diamond_square.py
src/map_solver_playground/maps/helpers/: __init__.py
src/map_solver_playground/maps/renderers/: __init__.py  flag_renderer.py  geo_path_renderer.py  renderer_factory.py
src/map_solver_playground/maps/solvers/: __init__.py  flow_field_solver.py  map_solver.py  test_map_solver.py
src/map_solver_playground/maps/types/: __init__.py  flag.py  geo_path.py
src/map_solver_playground/maps/visualization/: color_maps.py  pygame_renderer.py
src/map_solver_playground/metrics/: README.md  __init__.py  example.py  timing.py
src/map_solver_playground/profile/: README.md  example.py  timing.py
src/map_solver_playground/tests/: conftest.py  test_terrain.py
src/map_solver_playground/tests/performance/: test_mapview_performance.py
src/map_solver_playground/tests/unit/test_metrics/: test_measure_time.py
src/map_solver_playground/tests/unit/test_solvers/: test_flow_field_solver.py
tests/: conftest.py
tests/unit/test_components/: coverage.lcov  test_tooltip_panel.py
tests/unit/test_metrics/: test_measure_time.py
tests/unit/test_solvers/: __init__.py  test_flow_field_solver.py
