[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-solver-playground"
version = "0.1.0"
description = "A Python application for generating, visualizing, and manipulating 2D map data"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Zoltan Fabian" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "scipy==1.15.2",
    "networkx==3.4.2",
    "networkx-astar-path>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]


[project.urls]
"Homepage" = "https://github.com/dzooli/map-solver-playground"
"Bug Tracker" = "https://github.com/dzooli/map-solver-playground/issues"

[project.scripts]
map-solver = "map_solver_playground.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=map_solver_playground --cov-report=term-missing --cov-report=lcov"
